Fixed an issue with the wrapper padding on mobile not being removed for the sunburst tile (as it had been for the flowchart) and added a page refresh if the window is resized in a way that necessitates a desktop/mobile switch

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,13 +150,9 @@ strong {
     /*margin-right: 100px;*/
 /*}*/
 
-#sunburst-wrapper {
-    margin-left: 310px;
-}
 
-
-#flowchart-wrapper {
-    margin-left: 310px;
+#flowchart-wrapper, #sunburst-wrapper {
+    padding-left: 310px;
 }
 
 .footer {
@@ -218,8 +214,8 @@ strong {
         padding-right: 25px !important;
     }
 
-    #flowchart-wrapper {
-        margin-left: unset;
+    #flowchart-wrapper, #sunburst-wrapper {
+        padding-left: unset;
     }
 
     #flowchart-tile {
